// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":false,"disabled":false,"inputWidth":"base"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-20 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":false,"disabled":false,"inputWidth":"small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":false,"disabled":false,"inputWidth":"wide"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-24 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":false,"disabled":false,"inputWidth":"x-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-12 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":false,"disabled":false,"inputWidth":"xx-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-8 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":false,"disabled":false,"inputWidth":null} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":false,"disabled":false} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":false,"disabled":true,"inputWidth":"base"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-20 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" disabled=\\"true\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":false,"disabled":true,"inputWidth":"small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" disabled=\\"true\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":false,"disabled":true,"inputWidth":"wide"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-24 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" disabled=\\"true\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":false,"disabled":true,"inputWidth":"x-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-12 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" disabled=\\"true\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":false,"disabled":true,"inputWidth":"xx-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-8 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" disabled=\\"true\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":false,"disabled":true,"inputWidth":null} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" disabled=\\"true\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":false,"disabled":true} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" disabled=\\"true\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":true,"disabled":false,"inputWidth":"base"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-20 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <p class=\\"mt-1 ml-0.5 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":true,"disabled":false,"inputWidth":"small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <p class=\\"mt-1 ml-0.5 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":true,"disabled":false,"inputWidth":"wide"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-24 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <p class=\\"mt-1 ml-0.5 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":true,"disabled":false,"inputWidth":"x-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-12 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <p class=\\"mt-1 ml-0.5 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":true,"disabled":false,"inputWidth":"xx-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-8 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <p class=\\"mt-1 ml-0.5 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":true,"disabled":false,"inputWidth":null} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <p class=\\"mt-1 ml-0.5 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":true,"disabled":false} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <p class=\\"mt-1 ml-0.5 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":true,"disabled":true,"inputWidth":"base"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-20 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" disabled=\\"true\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <p class=\\"mt-1 ml-0.5 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":true,"disabled":true,"inputWidth":"small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" disabled=\\"true\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <p class=\\"mt-1 ml-0.5 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":true,"disabled":true,"inputWidth":"wide"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-24 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" disabled=\\"true\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <p class=\\"mt-1 ml-0.5 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":true,"disabled":true,"inputWidth":"x-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-12 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" disabled=\\"true\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <p class=\\"mt-1 ml-0.5 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":true,"disabled":true,"inputWidth":"xx-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-8 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" disabled=\\"true\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <p class=\\"mt-1 ml-0.5 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":true,"disabled":true,"inputWidth":null} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" disabled=\\"true\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <p class=\\"mt-1 ml-0.5 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":true,"disabled":true} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" disabled=\\"true\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <p class=\\"mt-1 ml-0.5 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":false,"disabled":false,"inputWidth":"base"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-20 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"test-placeholder\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":false,"disabled":false,"inputWidth":"small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"test-placeholder\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":false,"disabled":false,"inputWidth":"wide"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-24 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"test-placeholder\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":false,"disabled":false,"inputWidth":"x-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-12 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"test-placeholder\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":false,"disabled":false,"inputWidth":"xx-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-8 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"test-placeholder\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":false,"disabled":false,"inputWidth":null} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"test-placeholder\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":false,"disabled":false} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"test-placeholder\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":false,"disabled":true,"inputWidth":"base"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-20 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"test-placeholder\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" disabled=\\"true\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":false,"disabled":true,"inputWidth":"small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"test-placeholder\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" disabled=\\"true\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":false,"disabled":true,"inputWidth":"wide"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-24 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"test-placeholder\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" disabled=\\"true\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":false,"disabled":true,"inputWidth":"x-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-12 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"test-placeholder\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" disabled=\\"true\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":false,"disabled":true,"inputWidth":"xx-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-8 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"test-placeholder\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" disabled=\\"true\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":false,"disabled":true,"inputWidth":null} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"test-placeholder\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" disabled=\\"true\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":false,"disabled":true} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"test-placeholder\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" disabled=\\"true\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":true,"disabled":false,"inputWidth":"base"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-20 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"test-placeholder\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <p class=\\"mt-1 ml-0.5 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":true,"disabled":false,"inputWidth":"small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"test-placeholder\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <p class=\\"mt-1 ml-0.5 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":true,"disabled":false,"inputWidth":"wide"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-24 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"test-placeholder\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <p class=\\"mt-1 ml-0.5 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":true,"disabled":false,"inputWidth":"x-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-12 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"test-placeholder\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <p class=\\"mt-1 ml-0.5 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":true,"disabled":false,"inputWidth":"xx-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-8 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"test-placeholder\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <p class=\\"mt-1 ml-0.5 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":true,"disabled":false,"inputWidth":null} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"test-placeholder\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <p class=\\"mt-1 ml-0.5 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":true,"disabled":false} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"test-placeholder\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <p class=\\"mt-1 ml-0.5 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":true,"disabled":true,"inputWidth":"base"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-20 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"test-placeholder\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" disabled=\\"true\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <p class=\\"mt-1 ml-0.5 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":true,"disabled":true,"inputWidth":"small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"test-placeholder\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" disabled=\\"true\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <p class=\\"mt-1 ml-0.5 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":true,"disabled":true,"inputWidth":"wide"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-24 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"test-placeholder\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" disabled=\\"true\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <p class=\\"mt-1 ml-0.5 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":true,"disabled":true,"inputWidth":"x-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-12 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"test-placeholder\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" disabled=\\"true\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <p class=\\"mt-1 ml-0.5 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":true,"disabled":true,"inputWidth":"xx-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-8 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"test-placeholder\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" disabled=\\"true\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <p class=\\"mt-1 ml-0.5 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":true,"disabled":true,"inputWidth":null} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"test-placeholder\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" disabled=\\"true\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <p class=\\"mt-1 ml-0.5 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":true,"disabled":true} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub tabindex=\\"0\\" placeholder=\\"test-placeholder\\" spacing=\\"py-1 px-2\\" borderclass=\\"border-ink-200\\" borderradius=\\"rounded-md\\" backgroundclass=\\"bg-transparent\\" textsize=\\"text-xs\\" disabled=\\"true\\" maxheight=\\"max-h-64\\" class=\\"text-sm\\">
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 1</div>
        <div class=\\"p-2 cursor-pointer z-option text-vanilla-300 hover:bg-ink-200 truncate text-xs\\">Label 2</div>
      </zselect-stub>
    </div>
    <p class=\\"mt-1 ml-0.5 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;
